# xinlian-healthy-check

./: .gitignore  README.md
documents/01、项目计划/: 版本计划.emmx
documents/02、项目需求/: README.md
documents/02、项目需求/数据库/: README.md  zo_healthy.sql  zo_healthy_init.sql  zo_healthy_init_dict.sql  zo_healthy_init_office_term.sql  zo_healthy_init_pro_type.sql  zo_healthy_init_sample.sql  zo_healthy_test.sql
healthy-cpp/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  exclude.txt
healthy-cpp/arch-demo/: CMakeLists.txt  README.md  zh-dict.yaml
healthy-cpp/arch-demo/controller/: Router.cpp
healthy-cpp/arch-demo/uselib/fastdfs/: TestFastDfs.h
healthy-cpp/arch-demo/uselib/mail/: TestMail.cpp  TestMail.h
healthy-cpp/arch-demo/uselib/mongo/: TestMongo.cpp
healthy-cpp/arch-demo/uselib/mysql/: TestDb.cpp
healthy-cpp/arch-demo/uselib/redis/: TestRedis.cpp
healthy-cpp/arch-demo/uselib/rocketmq/: TestRocket.cpp
healthy-cpp/arch-demo/uselib/sms/: AliKeyConfig.cpp  TestAliSms.cpp  TestAliSms.h
healthy-cpp/health-c2-bas/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/health-c2-bas/controller/: Router.cpp
healthy-cpp/health-c2-market/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/health-c2-market/controller/: Router.cpp
healthy-cpp/healthy-c1-common/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c1-common/controller/: Router.cpp
healthy-cpp/healthy-c3-sales-order/: 1.bat  CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c3-sales-order/controller/: OtherComponent.hpp  Router.cpp
healthy-cpp/healthy-c3-sales-order/tpl/: entrust.yaml
healthy-cpp/healthy-c3-sales-unit/: 1.bat  CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c3-sales-unit/controller/: Router.cpp
healthy-cpp/healthy-c4-checkpeople/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c4-checkpeople/controller/: Router.cpp
healthy-cpp/healthy-c4-reportcheck/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c4-reportcheck/conf/: third-services.yaml
healthy-cpp/healthy-c4-reportcheck/controller/: Router.cpp
healthy-cpp/healthy-c4-reportcheck/tpl/: test.yaml
healthy-cpp/healthy-c4-reportprint/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c4-reportprint/conf/: third-services.yaml
healthy-cpp/healthy-c4-reportprint/controller/: Router.cpp
healthy-cpp/healthy-c4-unitreport/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c4-unitreport/conf/: third-services.yaml
healthy-cpp/healthy-c4-unitreport/controller/: Router.cpp
healthy-cpp/healthy-c4-unitreport/tpl/: test.yaml
healthy-cpp/healthy-c5-exalanding/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c5-exalanding/controller/: Router.cpp
healthy-cpp/healthy-c5-questatistics/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c5-questatistics/controller/: Router.cpp
healthy-cpp/healthy-c6-resultentry/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c6-resultentry/controller/: Router.cpp
healthy-cpp/healthy-c6-resultentry/tpl/: test.yaml
healthy-cpp/healthy-c7-common/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c7-common/conf/: third-services.yaml
healthy-cpp/healthy-c7-common/controller/: Router.cpp  SystemInterceptor.cpp
healthy-cpp/healthy-c7-common/tpl/: test.yaml
healthy-cpp/healthy-c8-common/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c8-common/conf/: data-source.yaml
healthy-cpp/healthy-c8-common/controller/: ApiDeclarativeServicesHelper.h  Router.cpp
healthy-cpp/healthy-c8-healthcertificate-manage/: CMakeLists.txt  README.md  main.cpp  zh-dict.yaml
healthy-cpp/healthy-c8-healthcertificate-manage/conf/: third-services.yaml
healthy-cpp/healthy-c8-healthcertificate-manage/controller/: Router.cpp
healthy-cpp/healthy-c8-inspection-report/: CMakeLists.txt  README.md  zh-dict.yaml
healthy-cpp/healthy-c8-inspection-report/controller/: Router.cpp
healthy-cpp/lib-common/include/: CharsetConvertHepler.h  EmailSender.h  GetDate.h  NacosClient.h  PdfComponent.h
healthy-cpp/lib-common/src/: ExcelComponent.cpp  FastDfsClient.cpp  GetDate.cpp  MongoClient.cpp  PdfComponent.cpp
healthy-cpp/lib-dy/lib64/: libjsoncpp.so.19
healthy-cpp/lib-mysql/src/: ConnectionPool.cpp
healthy-cpp/lib-oatpp/include/: IpUtil.h  JWTUtil.h
healthy-cpp/lib-oatpp/src/: JWTUtil.cpp
healthy-frontend/: .editorconfig  .env  .env.production  .eslintrc.cjs  .gitignore  .prettierrc.json  README.md  index.html  package.json  vite.config.js
healthy-frontend/public/: print-lock.css
healthy-frontend/public/template/: test-print-tpl.json
healthy-frontend/src/: main.js
healthy-frontend/src/apis/: request.js
healthy-frontend/src/assets/: base.css
healthy-java/: .gitignore  pom.xml
healthy-java/code-generator/: pom.xml
healthy-java/fastdfs-spring-boot-starter/: pom.xml
healthy-java/healthy-apis/: pom.xml
healthy-java/healthy-common/: pom.xml
healthy-java/healthy-doc/: Dockerfile  pom.xml
healthy-java/healthy-domain/: pom.xml
healthy-java/healthy-gateway/: Dockerfile  pom.xml
healthy-java/healthy-j1-percenter/: Dockerfile  pom.xml
healthy-java/healthy-j1-sysmanager/: Dockerfile  README.md  pom.xml
healthy-java/healthy-j2-department/: Dockerfile  README.md  pom.xml
healthy-java/healthy-j2-menu/: Dockerfile  README.md  pom.xml
healthy-java/healthy-j2-message/: Dockerfile  README.md  pom.xml
healthy-java/healthy-j2-role/: Dockerfile  README.md  pom.xml
healthy-java/healthy-j3-sysmanager/: Dockerfile  README.md  pom.xml
healthy-java/healthy-j4-portfolioitems/: Dockerfile  pom.xml
healthy-java/healthy-j4-sectionoffice/: Dockerfile  pom.xml
healthy-java/healthy-j4-templatemanagerment/: Dockerfile  pom.xml
healthy-java/healthy-j4-termmanagement/: Dockerfile  README.md  pom.xml
healthy-java/healthy-login/: Dockerfile  pom.xml
healthy-java/healthy-oauth2/: Dockerfile  pom.xml
(+1813 files in other folders)
